checkpoint: cleanup